{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 60,
  "lineage": "555a7c6f-c36f-87b6-3fc7-48a972044156",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "container_apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-container-apps-condoacesso-dev",
            "location": "brazilsouth",
            "name": "nsg-container-apps-condoacesso-dev",
            "resource_group_name": "rg-condoacesso-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.20.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowMySQL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.20.0.0/23",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ambiente": "dev",
              "gerenciado_por": "terraform",
              "projeto": "UNIVESP-Projeto-Integrador-VI"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-container-apps-condoacesso-dev",
            "resource_group_name": "rg-condoacesso-dev",
            "subscription_id": "227853ef-c1fd-4ddc-8e65-11f4a9f65978"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-mysql-condoacesso-dev",
            "location": "brazilsouth",
            "name": "nsg-mysql-condoacesso-dev",
            "resource_group_name": "rg-condoacesso-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.20.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMySQLFromContainerApps",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.20.0.0/23",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyOtherVnetInbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ambiente": "dev",
              "gerenciado_por": "terraform",
              "projeto": "UNIVESP-Projeto-Integrador-VI"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-mysql-condoacesso-dev",
            "resource_group_name": "rg-condoacesso-dev",
            "subscription_id": "227853ef-c1fd-4ddc-8e65-11f4a9f65978"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "container_apps_to_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.20.2.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-container-apps-condoacesso-dev/securityRules/AllowMySQL",
            "name": "AllowMySQL",
            "network_security_group_name": "nsg-container-apps-condoacesso-dev",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-condoacesso-dev",
            "source_address_prefix": "10.20.0.0/23",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowMySQL",
            "network_security_group_name": "nsg-container-apps-condoacesso-dev",
            "resource_group_name": "rg-condoacesso-dev",
            "subscription_id": "227853ef-c1fd-4ddc-8e65-11f4a9f65978"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.container_apps"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mysql_deny_other_vnet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-mysql-condoacesso-dev/securityRules/DenyOtherVnetInbound",
            "name": "DenyOtherVnetInbound",
            "network_security_group_name": "nsg-mysql-condoacesso-dev",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "rg-condoacesso-dev",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "DenyOtherVnetInbound",
            "network_security_group_name": "nsg-mysql-condoacesso-dev",
            "resource_group_name": "rg-condoacesso-dev",
            "subscription_id": "227853ef-c1fd-4ddc-8e65-11f4a9f65978"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.mysql"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mysql_from_container_apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.20.2.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-mysql-condoacesso-dev/securityRules/AllowMySQLFromContainerApps",
            "name": "AllowMySQLFromContainerApps",
            "network_security_group_name": "nsg-mysql-condoacesso-dev",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-condoacesso-dev",
            "source_address_prefix": "10.20.0.0/23",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowMySQLFromContainerApps",
            "network_security_group_name": "nsg-mysql-condoacesso-dev",
            "resource_group_name": "rg-condoacesso-dev",
            "subscription_id": "227853ef-c1fd-4ddc-8e65-11f4a9f65978"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.mysql"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "container_apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.0.0/23"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "container-apps-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.App/environments"
                  }
                ]
              }
            ],
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev/subnets/snet-container-apps",
            "name": "snet-container-apps",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-condoacesso-dev",
            "virtual_network_name": "vnet-condoacesso-dev"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-container-apps",
            "resource_group_name": "rg-condoacesso-dev",
            "subscription_id": "227853ef-c1fd-4ddc-8e65-11f4a9f65978",
            "virtual_network_name": "vnet-condoacesso-dev"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "mysql-flexible-server-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforMySQL/flexibleServers"
                  }
                ]
              }
            ],
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev/subnets/snet-mysql",
            "name": "snet-mysql",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-condoacesso-dev",
            "virtual_network_name": "vnet-condoacesso-dev"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-mysql",
            "resource_group_name": "rg-condoacesso-dev",
            "subscription_id": "227853ef-c1fd-4ddc-8e65-11f4a9f65978",
            "virtual_network_name": "vnet-condoacesso-dev"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "container_apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev/subnets/snet-container-apps",
            "network_security_group_id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-container-apps-condoacesso-dev",
            "subnet_id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev/subnets/snet-container-apps"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.container_apps",
            "module.network.azurerm_subnet.container_apps",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev/subnets/snet-mysql",
            "network_security_group_id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-mysql-condoacesso-dev",
            "subnet_id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev/subnets/snet-mysql"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.mysql",
            "module.network.azurerm_subnet.mysql",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3fe51a80-aa51-4dfa-8a3b-34502b5b303b",
            "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev",
            "location": "brazilsouth",
            "name": "vnet-condoacesso-dev",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-condoacesso-dev",
            "subnet": [
              {
                "address_prefixes": [
                  "10.20.0.0/23"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "container-apps-delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev/subnets/snet-container-apps",
                "name": "snet-container-apps",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-container-apps-condoacesso-dev"
              },
              {
                "address_prefixes": [
                  "10.20.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "mysql-flexible-server-delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.DBforMySQL/flexibleServers"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/virtualNetworks/vnet-condoacesso-dev/subnets/snet-mysql",
                "name": "snet-mysql",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/227853ef-c1fd-4ddc-8e65-11f4a9f65978/resourceGroups/rg-condoacesso-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-mysql-condoacesso-dev"
              }
            ],
            "tags": {
              "ambiente": "dev",
              "gerenciado_por": "terraform",
              "projeto": "UNIVESP-Projeto-Integrador-VI"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-condoacesso-dev",
            "resource_group_name": "rg-condoacesso-dev",
            "subscription_id": "227853ef-c1fd-4ddc-8e65-11f4a9f65978"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}